<resources>
    <string name="app_name">F1 Driver Biography</string>
    <string name="drivers_name">Name</string>
    <string name="drivers_born">Born</string>
    <string name="drivers_nationality">Nationality</string>
    <string name="drivers_team">Team</string>
    <string name="drivers_car_number">Car Number</string>
    <string name="drivers_wins_count">Wins</string>
    <string name="drivers_podiums_count">Podiums</string>
    <string name="drivers_descriptions">Descriptions</string>
    <string name="about_name">Wisnu Andika</string>
    <string name="about_gmail">wisnuandika104@gmail.com</string>
    <string name="about_description">A final-year Informatics student at UPN Veteran Jakarta, actively engaged in exploring Mobile Development through specialized online courses. Currently seeking an internship opportunity, particularly as a Front-End Web Developer or Mobile Developer, to pave the way for a career in the software development sector.</string>
    <string-array name="drivers_name_list">
        <item>Lando Norris</item>
        <item>Carlos Sainz Jr.</item>
        <item>Charles Leclerc</item>
        <item>Lewis Hamilton</item>
        <item>George Russell</item>
        <item>Max Verstappen</item>
        <item>Oscar Piastri</item>
        <item>Yuki Tsunoda</item>
        <item>Sergio Pérez</item>
        <item>Zhou Guanyu</item>
    </string-array>
    <string-array name="drivers_born_list">
        <item>13 November 1999 (25)</item>
        <item>1 September 1994 (30)</item>
        <item>16 October 1997 (27)</item>
        <item>7 January 1985 (39)</item>
        <item>15 February 1998 (26)</item>
        <item>30 September 1997 (27)</item>
        <item>06 April 2001 (23)</item>
        <item>11 May 2000 (24)</item>
        <item>26 January 1990 (34)</item>
        <item>30 May 1999 (25)</item>
    </string-array>
    <string-array name="drivers_nationality_list">
        <item>British</item>
        <item>Spanish</item>
        <item>Monégasque</item>
        <item>British</item>
        <item>British</item>
        <item>Dutch</item>
        <item>Australian</item>
        <item>Japanese</item>
        <item>Mexican</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="drivers_team_list">
        <item>McLaren</item>
        <item>Ferrari</item>
        <item>Ferrari</item>
        <item>Mercedes</item>
        <item>Mercedes</item>
        <item>Red Bull</item>
        <item>McLaren</item>
        <item>Red Bull</item>
        <item>Red Bull</item>
        <item>Alfa Romeo</item>
    </string-array>
</resources>