<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_detail"
            app:layout_constraintTop_toTopOf="@+id/iv_detail">

            <TextView
                android:id="@+id/tv_detail_name"
                style="@style/TextViewDetail.Title"
                android:text="@string/drivers_name" />

            <TextView
                android:id="@+id/tv_detail_born"
                style="@style/TextViewDetail"
                android:text="@string/drivers_born" />

            <TextView
                android:id="@+id/tv_detail_nationality"
                style="@style/TextViewDetail"
                android:text="@string/drivers_nationality" />

            <TextView
                android:id="@+id/tv_detail_team"
                style="@style/TextViewDetail"
                android:text="@string/drivers_team" />

            <TextView
                android:id="@+id/tv_detail_car_number"
                style="@style/TextViewDetail"
                android:text="@string/drivers_car_number" />

            <TextView
                android:id="@+id/tv_detail_win_count"
                style="@style/TextViewDetail"
                android:text="@string/drivers_wins_count" />

            <TextView
                android:id="@+id/tv_detail_podium_count"
                style="@style/TextViewDetail"
                android:text="@string/drivers_podiums_count" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_description"
            style="@style/TextViewDetail.Title"
            android:layout_marginTop="16dp"
            android:text="@string/drivers_descriptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail" />

        <TextView
            android:id="@+id/tv_detail_description"
            style="@style/TextViewDetail"
            android:layout_marginTop="10dp"
            android:text="@string/drivers_descriptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_description" />

        <Button
            android:id="@+id/btn_detail_share"
            style="@style/DetailButton"
            android:layout_marginTop="10dp"
            android:text="Share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>