<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/CardView.Item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/border_red"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_driver"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/charles_leclerc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_driver_name"
            style="@style/TextView.Title"
            android:layout_marginStart="10dp"
            android:text="@string/drivers_name"
            app:layout_constraintStart_toEndOf="@+id/iv_driver"
            app:layout_constraintTop_toTopOf="@+id/iv_driver" />

        <TextView
            android:id="@+id/tv_team_name"
            style="@style/TextView.SubTitle"
            android:layout_marginStart="10dp"
            android:text="@string/drivers_team"
            app:layout_constraintBottom_toBottomOf="@+id/tv_driver_name"
            app:layout_constraintStart_toEndOf="@+id/tv_driver_name"
            app:layout_constraintTop_toTopOf="@+id/iv_driver" />

        <TextView
            android:id="@+id/tv_description_name"
            style="@style/TextView.Thumbnail"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:text="@string/drivers_descriptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_driver"
            app:layout_constraintTop_toBottomOf="@+id/tv_driver_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>